# zypherscan

./: .dockerignore  .env  .env.example  .gitignore  .vercelignore  Dockerfile  QUICKSTART.md  RAILWAY_TROUBLESHOOTING.md  README.md  SCANNER_ARCHITECTURE.md  build-wasm.sh  docker-compose.yml  index.html  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  railway.json  scan_output.json  scan_output_2.json  server.js  tailwind.config.ts  vercel.json  vite.config.ts
api/: Cargo.toml  proxy-coingecko.js  proxy-mainnet.js  proxy-testnet.js  proxy-zebra.js  proxy-zypher.js  scan.rs
public/wasm/: zcash_wasm_bg.wasm
src/: App.tsx  index.css  vite-env.d.ts
src/components/: AddressBook.tsx  ExportDialog.tsx  Hero.tsx  InstallZucchiniBanner.tsx  Layout.tsx  MarketStatsBanner.tsx  MatrixBackground.tsx  NetworkActivityBanner.tsx  NetworkCharts.tsx  NetworkStats.tsx  PrivacyMetricsDashboard.tsx  RecentBlocks.tsx  SearchBar.tsx  SeedPhraseConnect.tsx  ShieldedActivityList.tsx  SupportDialog.tsx  SyncStatus.tsx  ViewingKeyDialog.tsx  WhaleTicker.tsx  mode-toggle.tsx
src/components/dashboard/: AnalyticsCharts.tsx  BalanceCard.tsx  PoolDistribution.tsx  QuickStats.tsx  SyncStatusCard.tsx  TransactionList.tsx  index.ts
src/contexts/: AuthContext.tsx  NetworkContext.tsx  WalletDataContext.tsx
src/hooks/: useAddressBook.ts  useAuth.ts  useShieldingActivity.ts  useSync.ts  useWalletData.ts  useZcashAPI.ts
src/integrations/supabase/: types.ts
src/lib/: address-book.ts  config.ts  encryption.ts  export.ts  index.ts  lightwalletd.ts  scanner-api.ts  seed-phrase-utils.ts  wasm-loader.ts  webzjs.ts  zcash-config.ts  zcash-crypto.ts
src/lib/wasm/: zcash_wasm.d.ts  zcash_wasm.js
src/pages/: AddressDetails.tsx  Auth.tsx  BlockDetails.tsx  Dashboard.tsx  DecryptTool.tsx  Index.tsx  Mempool.tsx  NetworkStatus.tsx  Price.tsx  PrivacyDashboard.tsx  RecentBlocks.tsx  TransactionDetails.tsx  WasmDiagnostics.tsx  WasmTest.tsx  ZECFlow.tsx
supabase/: config.toml
supabase/functions/zcash-api/: index.ts
supabase/migrations/: 20251127153514_5f3173c8-096a-401c-9f1a-34ebfa8c542a.sql
wasm/: BUILD.md  Cargo.toml  README.md
wasm/src/: key_parser.rs  lib.rs  seed_derivation.rs
zypherscan-decrypt/: Cargo.toml  scanner_client.js  server.js
zypherscan-decrypt/src/: lib.rs  main.rs
(+1 files in other folders)
