[package]
name = "zcash-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM essentials
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 🎯 TRYING 0.25 TO AVOID secp256k1
# 0.26 pulls secp256k1 via bip32 (non-optional)
# 0.25 is recent (2 months old) and should work with orchard 0.11

# Zcash primitives 0.25 (recent, hopefully avoids secp256k1)
zcash_primitives = { version = "0.25", default-features = false }

# Zcash note encryption (WASM-compatible)
zcash_note_encryption = "0.4"

# Orchard 0.11 (WASM-compatible, std only)
orchard = { version = "0.11", default-features = false, features = ["std"] }

# Force newer subtle for orchard 0.11 compatibility
subtle = "2.6"

# Encoding
hex = "0.4"
bech32 = "0.11"

# Zcash address parsing (for UFVK)
zcash_address = "0.10"

# Seed phrase support (BIP39)
bip39 = { version = "2.0", features = ["rand"] }

# ZIP32 key derivation
zip32 = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen units
