[package]
name = "zypherscan-decrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
zingolib = { git = "https://github.com/zingolabs/zingolib.git", branch = "dev" }
zip32 = "0.2.0"
chrono = "0.4"
serde_json = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
zcash_client_backend = { git = "https://github.com/zcash/librustzcash", rev = "3ba772c9b8"}
zcash_address = { git = "https://github.com/zcash/librustzcash", rev = "3ba772c9b8"}
zcash_keys = { git = "https://github.com/zcash/librustzcash", rev = "3ba772c9b8"}
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "3ba772c9b8"}
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "3ba772c9b8"}
zcash_transparent = { git = "https://github.com/zcash/librustzcash", rev = "3ba772c9b8"}
